--- a/client/package.json
+++ b/client/package.json
@@ -37,9 +37,7 @@
     "react-dom": "^15.3.1",
     "react-addons-update": "^15.3.1",
     "classnames": "^2.2.5",
-    "react-redux": "^4.4.1",
-    "react-router": "2.0.1",
-    "react-router-redux": "^4.0.2",
-    "redux": "^3.3.1"
+    "redux": "^3.3.1",
+    "react-refetch": "^1.0.0-beta.9"
   }
 }
