--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,6 @@
     "react-dom": "^15.3.1",
     "react-addons-update": "^15.3.1",
     "redux": "^3.3.1",
-    "react-refetch": "^1.0.0-beta.9"
+    "rest": "^2.0.0"
   }
 }
