--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "masterrbeit-client",
-  "version": "1.0.0",
+  "version": "1.0.0-SNAPSHOT",
   "description": "React Example",
   "main": "App.jsx",
   "scripts": {
@@ -26,12 +26,15 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "karma": "^1.2.0",
     "karma-jasmine": "^1.0.2",
-    "karma-phantomjs-launcher": "~1.0.1",
+    "karma-phantomjs-launcher": "^1.0.2",
     "jasmine-core": "^2.4.1",
-    "phantomjs": "^2.1.7",
+    "phantomjs-prebuilt ": "^2.1.12",
     "karma-webpack": "^1.8.0",
     "html-webpack-plugin": "^2.22.0",
-    "react-addons-perf": "^15.3.1"
+    "react-addons-perf": "^15.3.1",
+    "react-addons-test-utils": "^15.3.1",
+    "enzyme": "^2.4.1",
+    "phantomjs-polyfill": "0.0.2"
   },
   "dependencies": {
     "react": "^15.3.1",
